# NeuralNetwork

./: .gitignore  CMakeLists.txt  IActivationFunction.h  INeuron.cpp  INeuron.h  InnerNeuron.cpp  InnerNeuron.h  InputNeuron.h  LinearActivationFunction.h  LogisticActivationFunction.cpp  LogisticActivationFunction.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuralNetworkTrainer.cpp  NeuralNetworkTrainer.h  OutputLayer.cpp  OutputLayer.h  OutputNeuron.cpp  OutputNeuron.h  README.md  SigmoidActivationFunction.h  TrainingSet.h  Weight.cpp  Weight.h  main.cpp
